--- a/style.css
+++ b/style.css
@@ -25,17 +25,13 @@ body {
 }
 
 /* Score and Health Display */
-#score, #health {
+#score {
     position: absolute;
     top: 10px;
     left: 10px;
     color: white;
     font-size: 24px;
     z-index: 2;
-}
-#health {
-    left: auto;
-    right: 10px;
 }
 
 /* Game Over Screen */
@@ -90,7 +86,7 @@ body {
         display: flex;
     }
 
-    #score, #health {
+    #score {
         font-size: 18px;
     }
 }
